--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'org.ajoberstar.grgit' version '4.1.1'
+    id 'org.ajoberstar.grgit' version '4.1.0'
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'org.javamodularity.moduleplugin' version '1.8.3'
+    id 'org.javamodularity.moduleplugin' version '1.8.4'
     id 'ml.darubyminer360.gradleutils' version 'main-SNAPSHOT'
 //    id 'com.github.CloudLoaderMC.GradleUtils' version 'main-SNAPSHOT'
     id 'maven-publish'
@@ -12,6 +12,8 @@ apply plugin: 'maven-publish'
 apply plugin: 'java-library'
 apply plugin: 'org.javamodularity.moduleplugin'
 
+sourceCompatibility = 17
+targetCompatibility = 17
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 group 'net.minecraftforge'
