--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'maven-publish'
 apply plugin: 'java-library'
 apply plugin: 'org.javamodularity.moduleplugin'
 
-sourceCompatibility = 17
-targetCompatibility = 17
+java.sourceCompatibility = 17
+java.targetCompatibility = 17
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 group 'net.minecraftforge'
