--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
+import ml.darubyminer360.gradleutils.GradleUtils
+
 plugins {
     id 'org.ajoberstar.grgit' version '4.1.0'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'org.javamodularity.moduleplugin' version '1.8.4'
-    id 'ml.darubyminer360.gradleutils' version 'main-SNAPSHOT'
-//    id 'com.github.CloudLoaderMC.GradleUtils' version 'main-SNAPSHOT'
+    id 'ml.darubyminer360.gradleutils' version '2.2.0'
     id 'maven-publish'
     id 'java-library'
 }
@@ -23,7 +24,6 @@ repositories {
         name = 'forge'
         url = 'https://maven.minecraftforge.net'
     }
-    maven { url = 'https://jitpack.io' }
 }
 
 def isNonStable = { String version ->
@@ -116,8 +116,8 @@ publishing {
 
                 licenses {
                     license {
-                        name = 'LGPLv2.1'
-                        url = 'https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt'
+                        name = 'Apache 2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
 
@@ -129,5 +129,8 @@ publishing {
                 }
             }
         }
+    }
+    repositories {
+        maven GradleUtils.getPublishingCloudMaven(project)
     }
 }
