--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ task sourcesJar(type: Jar) {
 
 
 dependencies {
-    implementation('cpw.mods:modlauncher:9.0.7')
+    implementation('ml.cloudmc:ModLauncher:10.0.11')
     implementation('org.ow2.asm:asm:9.2')
     implementation('org.ow2.asm:asm-commons:9.2')
     implementation('org.ow2.asm:asm-tree:9.2')
